--- a/FollowMe/FollowMeApp/templates/mainPage.html
+++ b/FollowMe/FollowMeApp/templates/mainPage.html
@@ -1,7 +1,6 @@
 
  {% load staticfiles %}
  {% load staticfiles i18n %}
- {% load crispy_forms_tags %}
 
 <!doctype html>
 <!-- Website Template by freewebsitetemplates.com -->
@@ -28,53 +27,36 @@
 			<li>
 				<a href="{% static 'contact.html' %}">{{user.username}}</a>
 			</li>
-
 			<li>
 				<a href="logout">Logout</a>
 			</li>
-
-		
-
 		</ul>
 	</div>
 	{% endif %}
-	{% if not user.is_authenticated %}
-	<div id="header">
-		<a href="index" class="logo">
-			<img src="{% static 'images/FollowMe.png' %}" alt="" style=" width: 366px;">
-		</a>
-		<ul id="navigation">
-			<li class="selected">
-				<a href="index">home</a>
-			</li>
-			<li>
-				<a href="register">Registrarse</a>
-			</li>
-
-			<li>
-				<a href="login_view">Iniciar Sesión</a>
-			</li>
-			
-			<li>
-				<a>contact</a>
-			</li>
-		</ul>
-	</div>
-	{% endif %}
-	
 	<div id="body">
-		<h1><span>Regístrate, es Gratis!</span></h1>
-		<form method="post">
-		 {% csrf_token %}
-		 {{ form|crispy }}
-  		 
-  		 <input type="submit" name="send" id="send" value="{{title}}">
-		<!--	<input type="text" name="fname" id="fname" value="Nombre">
-			<input type="text" name="address" id="address" value="Correo">
-			<input type="text" name="email" id="email" value="Contraseña">
-			<input type="text" name="phone" id="phone" value="Repetir Contraseña">
-			<input type="submit" name="send" id="send" value="Envíar">-->
-		</form>
+		<div id="featured">
+			<!-- Aquí va el código -->
+		</div>
+<!--		<ul>
+			<li>
+				<a href="{% static 'gallery.html' %}">
+					<img src="{% static 'images/the-father.jpg' %}" alt="">
+					<span>the father</span>
+				</a>
+			</li>
+			<li>
+				<a href="{% static 'gallery.html' %}">
+					<img src="{% static 'images/the-actor.jpg' %}" alt="">
+					<span>the actor</span>
+				</a>
+			</li>
+			<li>
+				<a href="{% static 'gallery.html' %}">
+					<img src="{% static 'images/the-nerd.jpg' %}" alt="">
+					<span>the nerd</span>
+				</a>
+			</li>
+		</ul>-->
 	</div>
 	<div id="footer">
 		<div>
