--- a/FollowMe/FollowMeApp/templates/mainPage.html
+++ b/FollowMe/FollowMeApp/templates/mainPage.html
@@ -24,6 +24,13 @@
 				<a href="{% static 'contact.html' %}">{{user.username}}</a>
 			</li>
 			<li>
+				<a href="map">ruta</a>
+			</li>
+
+			<li>
+				<a href="getPosition">Obtener posición</a>
+			</li>
+			<li>
 				<a href="logout">Logout</a>
 			</li>
 		</ul>
