--- a/FollowMe/geoApp/templates/mainPageGeo.html
+++ b/FollowMe/geoApp/templates/mainPageGeo.html
@@ -49,7 +49,7 @@
 	<div id="header" style="padding: 18px 0 18px;  text-align: right">
 		<ul id="navigation"  style="padding:0px 0 0;">
 			<li class="selected">
-				<a href="index">home</a>
+				<a href="index2">home</a>
 			</li>	
 			<li>
 				<a href="{% static 'contact.html' %}">{{user.username}}</a>
