Mejorando detalles: Post cada 5 segundos, corrigiendo errores.

--- a/FollowMe/FollowMeApp/templates/login_view.html
+++ b/FollowMe/FollowMeApp/templates/login_view.html
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mustache Enthusiast</title>
+	<title>FollowMe</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %} ">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/mobile.css' %}" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="{% static 'js/mobile.js' %}"></script>
@@ -23,7 +23,7 @@
 				<a href="index">home</a>
 			</li>	
 			<li>
-				<a href="{% static 'contact.html' %}">{{user.username}}</a>
+				<a>{{user.username}}</a>
 			</li>
 			<li>
 				<a href="map">ruta</a>
