--- a/FollowMe/geoApp/templates/mainPageGeo.html
+++ b/FollowMe/geoApp/templates/mainPageGeo.html
@@ -52,7 +52,7 @@
 				<a href="index2">home</a>
 			</li>	
 			<li>
-				<a href="{% static 'contact.html' %}">{{user.username}}</a>
+				<a>{{user.username}}</a>
 			</li>
 			<li>
 				<a href="map">ruta</a>
