--- a/FollowMe/FollowMeApp/templates/index.html
+++ b/FollowMe/FollowMeApp/templates/index.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mustache Enthusiast</title>
+	<title>FollowMe</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %} ">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/mobile.css' %}" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="{% static 'js/mobile.js' %}"></script>
@@ -21,7 +21,7 @@
 				<a href="index">home</a>
 			</li>	
 			<li>
-				<a href="{% static 'contact.html' %}">{{user.username}}</a>
+				<a>{{user.username}}</a>
 			</li>
 			<li>
 				<a href="geoApp/map">ruta</a>
@@ -67,7 +67,9 @@
 				<span>Esta aplicación web está creada con único y específico fin: Seguirte</span>
 				<span>No importa qué tan lejos vayas, te encontraremos</span>
 				<span>Podrás ver las rutas que has tomado recientemnte.</span>
-				<a href="{% static 'blog-single-post.html' %}" class="more">Registrate!</a>
+				{% if not user.is_authenticated %}
+				<a href="register" class="more">Registrate!</a>
+				{% endif %}
 			</div>
 		</div>
 <!--		<ul>
