--- a/FollowMe/FollowMeApp/templates/mainPage.html
+++ b/FollowMe/FollowMeApp/templates/mainPage.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mustache Enthusiast</title>
+	<title>FollowMe</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %} ">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/mobile.css' %}" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="{% static 'js/mobile.js' %}"></script>
@@ -21,7 +21,7 @@
 				<a href="index">home</a>
 			</li>	
 			<li>
-				<a href="{% static 'contact.html' %}">{{user.username}}</a>
+				<a>{{user.username}}</a>
 			</li>
 			<li>
 				<a href="map">ruta</a>
